Bug 66793 - [bug] After window is maximized the titlebar right click menu won't pop up
Summary: [bug] After window is maximized the titlebar right click menu won't pop up
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-10 20:19 UTC by Brian Lovin
Modified: 2013-07-18 20:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Move conditions around to get desired behavior (1.28 KB, patch)
2013-07-13 04:04 UTC, Kristian Høgsberg
Details | Splinter Review

Description Brian Lovin 2013-07-10 20:19:24 UTC
System Environment:
--------------------------
Distro: Fedora 17
Arch: x86_64
wayland (HEAD) 1.1.91-0-g3f3671e
fontconfig (master) heads/master-0-gcbf06d7
drm (HEAD) libdrm-2.4.45-0-g63aeae1
mesa (9.1) heads/9.1-0-g26f802d
libxkbcommon (HEAD) xkbcommon-0.3.0-0-g27a1176
pixman (HEAD) pixman-0.30.0-0-g41daf50
cairo (HEAD) 1.12.14-0-g0dac37c
weston (HEAD) 1.1.91-0-g46cb4a9

Detailed Description:
-----------------------------
Run weston-terminal (for example), maximize the window by clicking the middle button in the title bar, then right click the title bar itself.

A context menu should pop up, but nothing does.

Steps to Reproduce:
----------------------------
1. start weston under X11 or DRM mode
2. ./weston-terminal (or any demo)
3. Maximize window
3. Right-click the window title bar
4. Observe that no menu is popped up.
Comment 1 Rob Bradford 2013-07-11 09:36:03 UTC
Patch to fix sent to the list.
Comment 2 U. Artie Eoff 2013-07-12 19:15:11 UTC
(In reply to comment #1)
> Patch to fix sent to the list.

See my follow-up to this patch on the list.  It may need more work.
Comment 3 Kristian Høgsberg 2013-07-13 04:04:41 UTC
Created attachment 82374 [details] [review]
Move conditions around to get desired behavior

I committed a slightly tweaked version of Robs patch (attached).  This fixes the missing context menu on maximized windows but doesn't allow moving a maximized window.

commit 3c9d96768859a7841d415df936dec9941d0f965c
Author: Rob Bradford <rob@linux.intel.com>
Date:   Thu Jul 11 10:35:55 2013 +0100

    window: Allow popup menu when the window is maximised
Comment 4 Joe Konno 2013-07-18 20:34:34 UTC
Thanks robster, krh! Verified in 1.2.0.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.