window: Allow popup menu when the window is maximised

https://bugs.freedesktop.org/show_bug.cgi?id=66793